sabnzbd/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sabnzbd
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"

spec:
  tls:
  - hosts:
    - nzb.casa.lan
    secretName: casa.lan
  rules:
  - host: nzb.casa.lan
    http:
      paths:
      - path: /
        backend:
          serviceName: sabnzbd-service
          servicePort: 8080
